--- a/hudi-common/pom.xml
+++ b/hudi-common/pom.xml
@@ -97,6 +97,15 @@
           </imports>
         </configuration>
       </plugin>
+      <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-surefire-plugin</artifactId>
+          <version>3.0.0-M4</version>
+          <configuration>
+            <reportFormat>plain</reportFormat>
+            <redirectTestOutputToFile>true</redirectTestOutputToFile>
+          </configuration>
+        </plugin>
     </plugins>
   </build>
 
